[tool.poetry]
name = "bx_py_utils"
version = "83"
description = "Various Python utility functions"
homepage = "https://github.com/boxine/bx_py_utils/"
authors = [
    "Jens Diemer <jens.diemer@boxine.de>",
    "Philipp Hagemeister <phihag@phihag.de>",
    "Florian Braun <mail@chiron-online.de>"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Developers",
]
license = "MIT"
keywords=["utilities"]
include = ["LICENSE", "README.md"]
readme="README.md"
packages = [{ include = "bx_py_utils" }]
[tool.poetry.urls]
"Bug Tracker" = "https://github.com/boxine/bx_py_utils/issues"


[tool.poetry.dependencies]
python = ">=3.9,<4.0.0"

[tool.poetry.dev-dependencies]
boto3 = "*"  # needed for e.g.: bx_py_utils/aws/ stuff!
requests-mock = "*"
tox = "*"  # https://github.com/tox-dev/tox
coveralls = "*"  # http://github.com/TheKevJames/coveralls-python
flake8 = "*"  # https://github.com/pycqa/flake8
EditorConfig = "*"  # https://github.com/editorconfig/editorconfig-core-py
safety = "*"  # https://github.com/pyupio/safety
mypy = "*"  # https://github.com/python/mypy
manageprojects = "*"  # https://github.com/jedie/manageprojects
twine = "*"  # https://github.com/pypa/twine
beautifulsoup4 = "*"
lxml = "*"
pdoc = "*"  # https://pdoc.dev/

# https://github.com/akaihola/darker
# https://github.com/ikamensh/flynt
# https://github.com/pycqa/isort
# https://github.com/pygments/pygments
darker = { version = "*", extras = ["flynt", "isort", "color"] }

[tool.poetry.scripts]
publish = "bx_py_utils_tests.publish:publish"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.darker]
src = ["."]
revision = "origin/master..."
line_length = 119
verbose = true
color = true
skip_string_normalization = true
diff = false
check = false
stdout = false
isort = true
flynt = true
lint = [
    "flake8",
]
log_level = "INFO"


[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/config_files/#pyprojecttoml-preferred-format
atomic=true
profile="black"
line_length=120
known_first_party=["bx_py_utils", "bx_py_utils_tests"]
skip_glob=['.*', '*/htmlcov/*']
lines_after_imports=2


[tool.coverage.run]
branch = true
parallel = true
source = ['.']
command_line = "-m unittest --locals --verbose"

[tool.coverage.report]
omit = ['.*', '*/tests/*']
skip_empty = true
fail_under = 30
show_missing = true
exclude_lines = [
    'if self.debug:',
    'pragma: no cover',
    'raise NotImplementedError',
    'if __name__ == .__main__.:',
]


[tool.tox]  # https://tox.wiki/en/latest/config.html#pyproject-toml
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py{311,310,39}
skip_missing_interpreters = True

[testenv]
passenv = *
allowlist_externals = make
commands_pre =
    make install
commands =
    make test
"""


[tool.mypy]
warn_unused_configs = true
ignore_missing_imports = true
allow_redefinition = true  # https://github.com/python/mypy/issues/7165
show_error_codes = true
plugins = []
exclude = [".venv", "tests"]


[manageprojects] # https://github.com/jedie/manageprojects
initial_revision = "baf1ebc"
initial_date = 2022-11-30T21:19:10+01:00
cookiecutter_template = "https://github.com/jedie/cookiecutter_templates/"
cookiecutter_directory = "poetry-python"
applied_migrations = [
    "cf44769", # 2023-01-11T08:15:06+01:00
    "01611af", # 2023-01-25T09:47:16+01:00
    "04d5a25", # 2023-03-07T16:25:36+01:00
]

[manageprojects.cookiecutter_context.cookiecutter]
full_name = "Jens Diemer"
github_username = "jedie"
author_email = "jens.diemer@boxine.de"
package_name = "bx_py_utils"
package_version = "71"
package_description = "Various Python utility functions"
package_url = "https://github.com/boxine/bx_py_utils"
issues_url = "https://github.com/boxine/bx_py_utils/issues"
license = "MIT"
_template = "https://github.com/jedie/cookiecutter_templates/"
